2004-09-07  Sebastien Pouliot  <sebastien@ximian.com>

	* X509Chain.cs: Fixed a bug when constructing a certificate chain from
	a collection (endless loop). Fixed bug when Reset-ing an empty chain.

2004-08-10  Sebastien Pouliot  <sebastien@ximian.com>

	* X509Store.cs: Now returns empty collection/list for certificates/
	CRL when access to a store is denied.

2004-07-15  Sebastien Pouliot  <sebastien@ximian.com>

	* X501Name.cs: Support for E (email) in FromString.
	* X520Attributes.cs: Added X520.EmailAddress.
	Both patches fix bug #61241 and were contributed by Ianier Munoz.

2004-05-27  Sebastien Pouliot  <sebastien@ximian.com>

	* X509Certificate.cs: Rethrow original exception when parsing X.509 
	certificates (inside a CryptographicException) so people can see if 
	their changes affects certificate decoding.

2004-05-12  Jesper Pedersen  <jep@itplus.dk>

	* PKCS12.cs: Removed file exists check from SaveToFile(). Removed 
	Equals() and GetHashCode(). Clone the original iteration count.
	
2004-05-06  Jesper Pedersen  <jep@itplus.dk>

	* PKCS12.cs: Fixed synchronization with X509CertificateCollection in 
	GetBytes ().

2004-05-05  Jesper Pedersen  <jep@itplus.dk>

	* PKCS12.cs: Added support for SafeBag attributes. Added support for 
	Clone() (ICloneable), Equals and GetHashCode. New methods:
	- AddCertificate (X509Certificate cert)
	- AddCertificate (X509Certificate cert, IDictionary attributes)
	- RemoveCertificate (X509Certificate cert)
	- RemoveCertificate (X509Certificate cert, IDictionary attributes)
	- AddPkcs8ShroudedKeyBag (AsymmetricAlgorithm aa)
	- AddPkcs8ShroudedKeyBag (AsymmetricAlgorithm aa, IDictionary attributes)
	- RemovePkcs8ShroudedKeyBag (AsymmetricAlgorithm aa)
	- AddKeyBag (AsymmetricAlgorithm aa)
	- AddKeyBag (AsymmetricAlgorithm aa, IDictionary attributes)
	- RemoveKeyBag (AsymmetricAlgorithm aa)
	- AsymmetricAlgorithm GetAsymmetricAlgorithm (IDictionary attrs)
	- X509Certificate GetCertificate (IDictionary attrs)