@@ -64,7 +64,7 @@ namespace Mono.Security.X509 {
 		static byte[] localityName = { 0x55, 0x04, 0x07 };
 		static byte[] stateOrProvinceName = { 0x55, 0x04, 0x08 };
 		static byte[] streetAddress = { 0x55, 0x04, 0x09 };
-		static byte[] serialNumber = { 0x55, 0x04, 0x05 };
+		//static byte[] serialNumber = { 0x55, 0x04, 0x05 };
 		static byte[] domainComponent = { 0x09, 0x92, 0x26, 0x89, 0x93, 0xF2, 0x2C, 0x64, 0x01, 0x19 };
 		static byte[] userid = { 0x09, 0x92, 0x26, 0x89, 0x93, 0xF2, 0x2C, 0x64, 0x01, 0x01 };
 		static byte[] email = { 0x2a, 0x86, 0x48, 0x86, 0xf7, 0x0d, 0x01, 0x09, 0x01 };
